--- a/style.css
+++ b/style.css
@@ -2,18 +2,36 @@
 h1 {
   text-align: center;
 }
+
+
 .cards {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  list-style: none;
-  align-content: space-between;
-  margin: 15px;
+  display: inline-grid;
+  grid-template-columns: auto auto auto auto;
+  margin: 40px;
   padding: 10px;
-  
+  grid-gap: 5px;
+  /* position: relative;  */
 }
+
 img {
   width: 100px;
   height:100px;
+}
+
+
+.card,
+.back-card {
+  width:100%;
+  height:100%;
+  backface-visibility: hidden;
+  position: absolute; } 
+
+
+.flip{
+  transform: rotateX(180deg);
+  
+} 
+.cards {
+  transition:transform 2s ;
+  transform-style: preserve-3d;
 }
