--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -50,11 +50,16 @@ body {
   height: 100%;
   padding: 20px;
   position: absolute;
-  backface-visibility: hidden;
+  
   background: orange;
   border-radius: 5px;
   
 }
+.card {backface-visibility: hidden; 
+}
+.back {
+  backface-visibility: visible;
+} 
 img{
   width: 100%;
   height: 100%;
@@ -76,28 +81,6 @@ img{
 
 
 
-/* .cards {
-  display: inline-grid;
-  grid-template-columns: auto auto auto auto;
-  margin: 40px;
-  padding: 10px;
-  grid-gap: 5px;
-  /* position: relative;   */
-/* } */ 
-
-/* img {
-  width: 100px;
-  height:100px;
-} */
-
-
-/* .card {
-  width:100%;
-  height:100%;
-  /* backface-visibility: hidden; */
-  /* position: absolute;  */
-  /* background-color: red; */
- /* } / */ 
 
 
  
