--- a/style.css
+++ b/style.css
@@ -5,15 +5,42 @@
   margin: 0;
   box-sizing: border-box;
 } 
-
-h1 {
-  text-align: center;
+.button {
+  background:coral;
+  width: 100%;
+  height: 100%;
+  font-size: 25px;
+  list-style: none;
+  animation: pulse 5s infinite;
+}
+@keyframes pulse {
+  0% {
+    background-color: #001F3F;
+  }
+  100% {
+    background-color: #FF4136;
+  }
 }
 
 body {
   height: 100vh;
   display: flex;
+  flex-direction:column;
+  justify-content: center;
   background: green;
+}
+
+h1 {
+display: flex;
+justify-content: center;
+margin: 20px;
+}
+
+a {
+  text-decoration: none;
+  display: flex;
+justify-content: center;
+margin: 20px;
 }
 
 .game {
@@ -27,42 +54,41 @@ body {
 }
 
 .a_card {
-  width: calc(25% - 10px);
-  height: calc(33.333% - 10px);
+  width: calc(20% - 10px);
+  height: calc(25% - 10px);
   margin: 5px;
   position: relative;
   transform-style: preserve-3d;
   transform: scale(1);
   transform-style: preserve-3d;
   transition: transform .5s;
-  box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,.3);
 }
-
 
 .a_card:active {
   transform: scale(0.97);
   transition: transform .2s;
 }
 
-
 .card, .back {
   width: 100%;
   height: 100%;
   padding: 20px;
   position: absolute;
-  
   background: orange;
   border-radius: 5px;
-  
 }
+
 .card {backface-visibility: hidden; 
 }
+
 .back {
   backface-visibility: visible;
 } 
+
 img{
-  width: 100%;
-  height: 100%;
+  width: 120%;
+  height: 120%;
 }
 
 .a_card.flip {
@@ -73,7 +99,6 @@ img{
 .card {
   transform: rotateY(180deg);
 }
-
 
 
 
