--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@
   background:coral;
   width: 100%;
   height: 100%;
-  font-size: 25px;
+  font-size: 100px;
   list-style: none;
   animation: pulse 5s infinite;
+  font-family: "cookiss", serif;
 }
 @keyframes pulse {
   0% {
@@ -27,20 +28,28 @@ body {
   display: flex;
   flex-direction:column;
   justify-content: center;
-  background: green;
+  background-color: green;
+}
+
+@font-face {
+  font-family: 'cookiss';
+  src: url('fonts/cookiss-webfont.woff2') format('woff2'),
+       url('fonts/cookiss-webfont.woff') format('woff');
 }
 
 h1 {
 display: flex;
 justify-content: center;
 margin: 20px;
+font-family: "cookiss", serif;
+font-size: 50px;
 }
 
 a {
-  text-decoration: none;
-  display: flex;
-justify-content: center;
-margin: 20px;
+text-decoration: none;
+ display: flex;
+ justify-content: center;
+ margin: 20px;
 }
 
 .game {
